--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,9 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "main", "BB-Teams"]
+    branches: ["BB-Teams"]
   pull_request:
-    branches: [ "main", "BB-Teams"]
+    branches: ["BB-Teams"]
 
 jobs:
 
