--- a/main_backend/src/main/resources/application.properties
+++ b/main_backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8080
 
 # Default MySQL Configuration (for local development)
-spring.datasource.url=jdbc:mysql://localhost:3306/concert_db
-spring.datasource.username=concert_user
-spring.datasource.password=concert_password
+spring.datasource.url=jdbc:mysql://localhost:3306/devop_db
+spring.datasource.username=root
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate Configuration
