--- a/main_backend/Dockerfile
+++ b/main_backend/Dockerfile
@@ -1,10 +1,11 @@
-# Use OpenJDK 17 as base image
-FROM eclipse-temurin:17-jdk
+# Multi-stage build for optimized Spring Boot Docker image
+# Stage 1: Build stage
+FROM eclipse-temurin:17-jdk as builder
 
 # Set working directory
 WORKDIR /app
 
-# Copy Maven wrapper and pom.xml
+# Copy Maven wrapper and pom.xml for dependency caching
 COPY mvnw .
 COPY .mvn .mvn
 COPY pom.xml .
@@ -12,17 +13,37 @@ COPY pom.xml .
 # Make mvnw executable
 RUN chmod +x ./mvnw
 
-# Download dependencies
+# Download dependencies (cache layer)
 RUN ./mvnw dependency:go-offline -B
 
 # Copy source code
 COPY src src
 
-# Build the application
-RUN ./mvnw clean package -DskipTests
+# Build the application (skip tests to avoid corrupted test files)
+RUN ./mvnw clean package -DskipTests -q
+
+# Stage 2: Runtime stage
+FROM eclipse-temurin:17-jre
+
+# Install curl for health checks
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
+# Set working directory
+WORKDIR /app
+
+# Create non-root user for security
+RUN addgroup --system spring && adduser --system spring --ingroup spring
+USER spring:spring
+
+# Copy the built JAR from builder stage
+COPY --from=builder /app/target/concert-backend-*.jar app.jar
 
 # Expose port
 EXPOSE 8080
 
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=30s --retries=3 \
+  CMD curl -f http://localhost:8080/actuator/health || exit 1
+
 # Run the application with docker profile
-ENTRYPOINT ["java", "-Dspring.profiles.active=docker", "-jar", "target/concert-backend-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java", "-Dspring.profiles.active=docker", "-Xmx512m", "-Xms256m", "-jar", "app.jar"]
