--- a/main_backend/src/main/resources/application-docker.properties
+++ b/main_backend/src/main/resources/application-docker.properties
@@ -1,5 +1,5 @@
 # Docker MySQL Configuration
-spring.datasource.url=jdbc:mysql://mysql:3306/devop_db
+spring.datasource.url=jdbc:mysql://mysql:3306/concert_db
 spring.datasource.username=concert_user
 spring.datasource.password=concert_password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -20,3 +20,11 @@ jwt.expiration=604800
 # Logging
 logging.level.com.concert=DEBUG
 logging.level.org.springframework.security=DEBUG
+
+# Actuator for health checks and monitoring
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=when-authorized
+management.health.defaults.enabled=true
+
+# CORS Configuration for Docker
+spring.web.cors.allowed-origins=http://localhost:3000,http://frontend:3000
