--- a/main_backend/pom.xml
+++ b/main_backend/pom.xml
@@ -14,7 +14,8 @@
 	<name>concert-backend</name>
 	<description>Concert Backend API</description>
 	<properties>
-		<java.version>17</java.version>
+		<!-- Updated to latest LTS -->
+		<java.version>21</java.version>
 		<!-- Fail build on low coverage by default; CI can set -Djacoco.haltOnFailure=false -->
 		<jacoco.haltOnFailure>true</jacoco.haltOnFailure>
 	</properties>
