add e2e tests, CI/CD pipelines, env config for backend URL Initial commit of CI/CD pipelines and E2E tests

--- a/main_frontend/concert1/package.json
+++ b/main_frontend/concert1/package.json
@@ -7,7 +7,9 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test:e2e": "playwright test --project=chromium --reporter=list --headed",
+    "test:e2e:headless": "playwright test --project=chromium --reporter=list"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
@@ -16,5 +18,8 @@
     "tailwindcss": "^4.1.12",
     "vue": "^3.5.20",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.55.1"
   }
 }
