--- a/main_backend/Dockerfile
+++ b/main_backend/Dockerfile
@@ -1,38 +1,49 @@
 # Multi-stage build for optimized Spring Boot Docker image
 # Stage 1: Build stage
-FROM maven:3.9.9-eclipse-temurin-21 AS builder
+FROM eclipse-temurin:17-jdk as builder
 
+# Set working directory
 WORKDIR /app
 
-# Copy pom first for dependency layer caching
+# Copy Maven wrapper and pom.xml for dependency caching
+COPY mvnw .
+COPY .mvn .mvn
 COPY pom.xml .
-# Pre-fetch dependencies
-RUN mvn -B dependency:go-offline
 
-# Copy source
-COPY src ./src
+# Make mvnw executable
+RUN chmod +x ./mvnw
 
-# Build (skip tests for faster image build)
-RUN mvn -q clean package -DskipTests
+# Download dependencies (cache layer)
+RUN ./mvnw dependency:go-offline -B
+
+# Copy source code
+COPY src src
+
+# Build the application (skip tests to avoid corrupted test files)
+RUN ./mvnw clean package -DskipTests -q
 
 # Stage 2: Runtime stage
-FROM eclipse-temurin:21-jre
+FROM eclipse-temurin:17-jre
 
 # Install curl for health checks
 RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 
+# Set working directory
 WORKDIR /app
 
-# Non-root user
+# Create non-root user for security
 RUN addgroup --system spring && adduser --system spring --ingroup spring
 USER spring:spring
 
-# Copy built jar
+# Copy the built JAR from builder stage
 COPY --from=builder /app/target/concert-backend-*.jar app.jar
 
+# Expose port
 EXPOSE 8080
 
+# Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=30s --retries=3 \
   CMD curl -f http://localhost:8080/actuator/health || exit 1
 
+# Run the application with docker profile
 ENTRYPOINT ["java", "-Dspring.profiles.active=docker", "-Xmx512m", "-Xms256m", "-jar", "app.jar"]
