--- a/main_backend/Dockerfile
+++ b/main_backend/Dockerfile
@@ -1,49 +1,53 @@
-# Multi-stage build for optimized Spring Boot Docker image
-# Stage 1: Build stage
-FROM eclipse-temurin:17-jdk as builder
+# Multi-stage build for Spring Boot backend (cross-platform friendly)
+# Stage 1: Build with official Maven + Temurin 21 (avoids wrapper + line-ending issues on Windows)
+FROM maven:3.9.9-eclipse-temurin-21 AS build
 
-# Set working directory
 WORKDIR /app
 
-# Copy Maven wrapper and pom.xml for dependency caching
-COPY mvnw .
-COPY .mvn .mvn
+# Copy only pom first to leverage dependency layer caching
 COPY pom.xml .
+RUN mvn -B -q dependency:go-offline
 
-# Make mvnw executable
-RUN chmod +x ./mvnw
+# Copy source (after deps cached)
+COPY src ./src
 
-# Download dependencies (cache layer)
-RUN ./mvnw dependency:go-offline -B
+# Optional build arg to skip tests (override with --build-arg SKIP_TESTS=false)
+ARG SKIP_TESTS=true
+# Build
+RUN if [ "$SKIP_TESTS" = "true" ]; then \
+      mvn -q clean package -DskipTests; \
+    else \
+      mvn -q clean package; \
+    fi
 
-# Copy source code
-COPY src src
+# Stage 2: Minimal runtime image
+FROM eclipse-temurin:21-jre
 
-# Build the application (skip tests to avoid corrupted test files)
-RUN ./mvnw clean package -DskipTests -q
+ENV JAVA_OPTS="-Xms256m -Xmx512m" \
+    TZ=UTC \
+    SPRING_PROFILES_ACTIVE=docker
 
-# Stage 2: Runtime stage
-FROM eclipse-temurin:17-jre
+# Install curl for healthcheck (Debian slim base)
+RUN apt-get update && apt-get install -y --no-install-recommends curl && rm -rf /var/lib/apt/lists/*
 
-# Install curl for health checks
-RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
-
-# Set working directory
 WORKDIR /app
 
-# Create non-root user for security
-RUN addgroup --system spring && adduser --system spring --ingroup spring
+# Create non-root user (works on Linux hosts & Docker Desktop on Windows/macOS)
+RUN groupadd -r spring && useradd -r -g spring spring
 USER spring:spring
 
-# Copy the built JAR from builder stage
-COPY --from=builder /app/target/concert-backend-*.jar app.jar
+# Copy fat jar
+COPY --from=build /app/target/concert-backend-*.jar app.jar
 
-# Expose port
 EXPOSE 8080
 
-# Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=30s --retries=3 \
-  CMD curl -f http://localhost:8080/actuator/health || exit 1
+  CMD curl -fsS http://localhost:8080/actuator/health || exit 1
 
-# Run the application with docker profile
-ENTRYPOINT ["java", "-Dspring.profiles.active=docker", "-Xmx512m", "-Xms256m", "-jar", "app.jar"]
+# Entry point (supports extra JAVA_OPTS at runtime)
+ENTRYPOINT ["sh", "-c", "exec java $JAVA_OPTS -jar app.jar"]
+
+# Notes:
+# - Works the same on Windows/macOS/Linux because build uses official Maven image (no mvnw chmod issues).
+# - Override tests: docker build --build-arg SKIP_TESTS=false -t concert-backend .
+# - Add --platform=linux/amd64 if building on Apple Silicon for a different target.
