--- a/main_frontend/concert1/package.json
+++ b/main_frontend/concert1/package.json
@@ -8,8 +8,9 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "test:e2e": "playwright test --project=chromium --reporter=list --headed",
-    "test:e2e:headless": "playwright test --project=chromium --reporter=list"
+    "cy:open": "cypress open",
+    "test:e2e": "cypress run --browser electron",
+    "test:e2e:headless": "cypress run --browser electron --headless"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
@@ -20,6 +21,6 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@playwright/test": "^1.55.1"
+    "cypress": "^13.17.0"
   }
 }
