--- a/.github/workflows/frontend-e2e.yml
+++ b/.github/workflows/frontend-e2e.yml
@@ -25,7 +25,6 @@ jobs:
         working-directory: main_frontend/concert1
         run: |
           npm ci
-          npx playwright install --with-deps chromium
 
       - name: Start backend stack (MySQL + backend)
         run: |
@@ -42,18 +41,18 @@ jobs:
           for i in {1..60}; do
             if curl -sf http://localhost:3000/concert/ >/dev/null; then echo "Frontend up"; break; fi; sleep 2; done
 
-      - name: Run Playwright tests
-        env:
-          PLAYWRIGHT_BASE_URL: http://localhost:3000/concert
+      - name: Run Cypress tests
         working-directory: main_frontend/concert1
         run: npm run test:e2e
 
-      - name: Upload Playwright report (if exists)
+      - name: Upload Cypress screenshots/videos (if exist)
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: playwright-report
-          path: main_frontend/concert1/playwright-report
+          name: cypress-artifacts
+          path: |
+            main_frontend/concert1/cypress/screenshots
+            main_frontend/concert1/cypress/videos
           if-no-files-found: ignore
 
       - name: Cleanup
