ci(backend-test): use pure H2 for unit tests; remove MySQL service and env overrides to avoid driver/url mismatch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,21 +91,7 @@ jobs:
       run:
         working-directory: ./main_backend
     
-    services:
-      mysql:
-        image: mysql:8.0
-        env:
-          MYSQL_ROOT_PASSWORD: rootpassword
-          MYSQL_DATABASE: concert_db
-          MYSQL_USER: concert_user
-          MYSQL_PASSWORD: concert_password
-        ports:
-          - 3306:3306
-        options: >-
-          --health-cmd="mysqladmin ping --silent"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
+    # No external DB service for unit tests; H2 is used via the test profile
 
     steps:
       - name: 📥 Checkout code
@@ -118,23 +104,11 @@ jobs:
           distribution: 'temurin'
           cache: 'maven'
 
-      - name: 🔧 Wait for MySQL to be ready
-        run: |
-          for i in {1..30}; do
-            if mysqladmin ping -h 127.0.0.1 -u concert_user -pconcert_password --silent; then
-              echo "MySQL is ready!"
-              break
-            fi
-            echo "Waiting for MySQL... ($i/30)"
-            sleep 2
-          done
+      # No MySQL wait needed when using H2
 
-      - name: 🧪 Run backend tests
+      - name: 🧪 Run backend tests (H2)
         run: ./mvnw clean test -Dspring.profiles.active=test
         env:
-          SPRING_DATASOURCE_URL: jdbc:mysql://localhost:3306/concert_db
-          SPRING_DATASOURCE_USERNAME: concert_user
-          SPRING_DATASOURCE_PASSWORD: concert_password
           JWT_SECRET: 2c9a26e1fd7b5cf2ec6d9e30e7c0b4a8a6e6c7d9b1f8e2d3c4f5e7a9b0d1c2e3
 
       - name: 📊 Generate JaCoCo coverage report
