fix(ci): use npm ci and ensure TypeScript is in package.json
- Change Cypress CI job from 'npm install' to 'npm ci' for reliable dependency installation
- Keep package-lock.json (don't delete it) to ensure consistent installs
- Add TypeScript 5.9.3 with exact version (no caret) in devDependencies
- Add @types/node 24.7.2 for Node.js type definitions
- npm ci uses package-lock.json and ensures all dependencies including TypeScript are installed

This fixes the 'TypeScript is not installed' error by:
1. Using npm ci which respects the lock file exactly
2. Ensuring TypeScript is explicitly listed in package.json devDependencies
3. Not deleting package-lock.json during CI, which was causing inconsistent installs

Previous issue: Deleting package-lock.json caused npm install to regenerate it,
sometimes missing TypeScript from the install process.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -315,9 +315,8 @@ jobs:
       - name: 📥 Install frontend dependencies
         working-directory: ./main_frontend/concert1
         run: |
-          rm -rf node_modules package-lock.json || true
-          npm cache clean --force
-          npm install
+          rm -rf node_modules || true
+          npm ci
 
       - name: 🔍 Verify TypeScript installation
         working-directory: ./main_frontend/concert1
