--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -92,7 +92,7 @@ services:
       - backend
     networks:
       - concert-network
-    command: ["sh", "-c", "npm ci && npm run dev -- --host 0.0.0.0 --port 3000"]
+    command: ["sh", "-c", "npm install && npm run dev -- --host 0.0.0.0 --port 3000"]
 
 volumes:
   mysql_data:
