--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,8 +106,8 @@ jobs:
 
       # No MySQL wait needed when using H2
 
-      - name: 🧪 Run backend tests (H2)
-        run: ./mvnw clean test -Dspring.profiles.active=test
+      - name: 🧪 Run backend tests (H2 only, exclude Docker tests)
+        run: ./mvnw clean test -Dspring.profiles.active=test -Dtest='!**/*DockerTest'
         env:
           JWT_SECRET: 2c9a26e1fd7b5cf2ec6d9e30e7c0b4a8a6e6c7d9b1f8e2d3c4f5e7a9b0d1c2e3
 
