--- a/main_frontend/concert1/package.json
+++ b/main_frontend/concert1/package.json
@@ -8,9 +8,15 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
     "cy:open": "cypress open",
     "test:e2e": "cypress run --browser electron",
-    "test:e2e:headless": "cypress run --browser electron --headless"
+    "test:e2e:headless": "cypress run --browser electron --headless",
+    "test:e2e:coverage": "cypress run --browser electron --headless && nyc report --reporter=html",
+    "test:all": "npm run test:coverage && npm run test:e2e:coverage"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
@@ -21,6 +27,19 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "cypress": "^13.17.0"
+    "@cypress/code-coverage": "^3.13.4",
+    "@nuxt/test-utils": "^3.14.4",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/user-event": "^14.5.2",
+    "@testing-library/vue": "^8.1.0",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vitest/coverage-v8": "^3.2.0",
+    "@vitest/ui": "^3.2.0",
+    "@vue/test-utils": "^2.4.6",
+    "cypress": "^13.17.0",
+    "happy-dom": "^15.11.7",
+    "jsdom": "^25.0.1",
+    "nyc": "^17.1.0",
+    "vitest": "^3.2.0"
   }
 }
