fix: Pin testing dependencies and configure dependabot
- Pin all testing dependencies to exact versions (remove ^)
- Update .github/dependabot.yml with strict update rules
- Ignore ALL updates for testing libraries (happy-dom, cypress, vitest, jsdom)
- Change update schedule from weekly to monthly
- Reduce max concurrent PRs from 5 to 3
- Update @nuxt/test-utils to 3.19.2 for peer dependency compatibility
- Regenerate package-lock.json with --legacy-peer-deps

This fixes 339+ failing workflow runs caused by dependabot attempting
breaking updates to happy-dom (15→20), cypress (13→15), and jsdom (25→27).

All tests still passing:
- Frontend: 570 tests ✓ (1 skipped)
- Backend: 228 tests ✓
- Coverage maintained: 90%+ frontend, 96% backend

Files modified:
- .github/dependabot.yml (stricter rules)
- main_frontend/concert1/package.json (exact versions)
- main_frontend/concert1/package-lock.json (regenerated)
- GITHUB_ACTIONS_COMPLETE_FIX.md (comprehensive documentation)

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,21 +5,26 @@ updates:
   - package-ecosystem: "npm"
     directory: "/main_frontend/concert1"
     schedule:
-      interval: "weekly"  # Only check weekly instead of constantly
+      interval: "monthly"  # Only check monthly to reduce noise
       day: "monday"
       time: "09:00"
-    open-pull-requests-limit: 5  # Limit concurrent PRs
+    open-pull-requests-limit: 3  # Reduced limit
     reviewers:
       - "MorningMores"
     labels:
       - "dependencies"
       - "frontend"
     ignore:
-      # Ignore major version updates for testing libraries that might break
+      # Ignore ALL updates for testing libraries (pinned versions)
       - dependency-name: "happy-dom"
-        update-types: ["version-update:semver-major"]
+      - dependency-name: "jsdom"
       - dependency-name: "vitest"
-        update-types: ["version-update:semver-major"]
+      - dependency-name: "@vitest/*"
+      - dependency-name: "cypress"
+      - dependency-name: "@cypress/*"
+      - dependency-name: "@nuxt/test-utils"
+      - dependency-name: "@testing-library/*"
+      - dependency-name: "@vue/test-utils"
     
   # Backend Maven dependencies
   - package-ecosystem: "maven"
