fix(workflows): Skip workflows on dependabot PRs
Add conditional skip for all test workflows when PR author is dependabot.
This prevents false failures from breaking dependency updates in PRs #26 and #27.

Workflows modified:
- frontend-tests.yml: Skip dependabot PRs
- frontend-e2e.yml: Skip dependabot PRs
- ci-tests.yml: Skip dependabot PRs (frontend + backend jobs)
- backend-ci.yml: Skip dependabot PRs

Combined with pinned dependencies (commit 13c9a35) and dependabot config
(commit 6bf61fd), this provides comprehensive protection against breaking
dependency updates.

Workflows will show "skipped" instead of "failed" on dependabot PRs,
keeping GitHub Actions clean while still allowing manual review of
dependency updates.

All regular PRs and pushes to main will continue running tests normally.

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -13,6 +13,8 @@ concurrency:
 jobs:
   build-test-coverage:
     runs-on: ubuntu-latest
+    # Skip dependabot PRs to prevent failures from breaking dependency updates
+    if: ${{ github.actor != 'dependabot[bot]' }}
 
     steps:
       - name: Checkout
