fix(workflow): Fix secrets context in backend-ci.yml
Changed if condition from checking secrets.CODECOV_TOKEN to using
continue-on-error instead, which is the recommended approach for
optional secret-dependent steps.

This fixes the workflow syntax error that was preventing backend-ci
from running properly.

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -80,8 +80,9 @@ jobs:
           reporter: java-junit
 
       - name: Upload coverage to Codecov (optional)
-        if: ${{ always() && secrets.CODECOV_TOKEN != '' }}
+        if: always()
         uses: codecov/codecov-action@v4
+        continue-on-error: true
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: main_backend/target/site/jacoco/jacoco.xml
