fix(workflows): Add path filters to skip on documentation changes
Prevent workflows from running on documentation-only commits:
- frontend-e2e.yml: Skip on *.md, docs/**, dependabot.yml changes
- frontend-tests.yml: Skip on *.md in frontend
- ci-tests.yml: Skip on *.md, docs/**, dependabot.yml changes
- backend-ci.yml: Skip on *.md, docs/**, dependabot.yml, frontend changes

This prevents unnecessary workflow runs and failures when only updating
documentation files like FINAL_FIX_SUMMARY.md or WORKFLOW_SYNTAX_FIX.md.

Workflows will only run when actual code changes are made.

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -3,8 +3,18 @@ name: Backend CI
 on:
   push:
     branches: [ main, FE-Testing ]
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
+      - '.github/dependabot.yml'
+      - 'main_frontend/**'
   pull_request:
     branches: [ main ]
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
+      - '.github/dependabot.yml'
+      - 'main_frontend/**'
 
 concurrency:
   group: backend-ci-${{ github.ref }}
