--- a/.github/workflows/frontend-tests.yml
+++ b/.github/workflows/frontend-tests.yml
@@ -9,11 +9,15 @@ on:
       - FE-tester
     paths:
       - 'main_frontend/concert1/**'
+    paths-ignore:
+      - 'main_frontend/concert1/**.md'
   push:
     branches:
       - FE-tester
     paths:
       - 'main_frontend/concert1/**'
+    paths-ignore:
+      - 'main_frontend/concert1/**.md'
 
 jobs:
   unit-tests:
