--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -42,8 +42,14 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Install Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/v2.23.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          docker-compose --version
+
       - name: Start services (MySQL)
-        run: docker compose up -d mysql
+        run: docker-compose up -d mysql
 
       - name: Wait for MySQL
         run: |
@@ -58,7 +64,7 @@ jobs:
       - name: Run backend tests in Docker (with JaCoCo)
         run: |
           set -euo pipefail
-          docker compose run --rm backend-tests bash -lc "mvn -B -T 1C -Djacoco.haltOnFailure=false test jacoco:report"
+          docker-compose run --rm backend-tests bash -lc "mvn -B -T 1C -Djacoco.haltOnFailure=false test jacoco:report"
 
       - name: Publish test run log
         if: always()
@@ -84,6 +90,7 @@ jobs:
       - name: Generate JUnit test summary
         uses: dorny/test-reporter@v1
         if: always()
+        continue-on-error: true
         with:
           name: JUnit Tests
           path: main_backend/target/surefire-reports/*.xml
