fix(ci): Simplify testing workflows - run all tests in unit-tests.yml
Changes:
- Moved integration-tests.yml to backup (redundant)
- Updated unit-tests.yml to run ALL backend tests (unit + Testcontainers)
- Added Docker setup for Testcontainers in unit-tests workflow
- Increased timeout to 15min for backend tests
- Added test results upload

Simplified strategy:
- unit-tests.yml: Frontend (Vitest) + Backend (Maven all tests)
- e2e-tests.yml: Full stack Cypress E2E
- No separate integration workflow needed

--- a/.github/workflows-backup/integration-tests.yml
+++ b/.github/workflows-backup/integration-tests.yml
@@ -49,12 +49,10 @@ jobs:
       - name: 🐳 Pre-pull MySQL image for Testcontainers
         run: docker pull mysql:8.0
 
-      - name: 🧪 Run integration tests (Testcontainers + DockerTest)
+      - name: 🧪 Run all backend tests with Testcontainers
         working-directory: main_backend
         run: |
-          mvn -B -DforkCount=1 -DreuseForks=false test \
-            -Dtest='*DockerTest,*IntegrationTest' \
-            -DfailIfNoTests=false
+          mvn -B -DforkCount=1 -DreuseForks=false clean test
         env:
           TESTCONTAINERS_RYUK_DISABLED: false
 
