refactor(ci): Separate testing into 3 distinct workflows
Restored and separated testing workflows:
- unit-tests.yml: Fast unit tests (frontend Vitest + backend Maven)
- integration-tests.yml: Integration tests with Testcontainers
- e2e-tests.yml: Full stack Cypress E2E

Clear separation:
1. Unit Tests (unit-tests.yml):
   - Frontend: npm test (~7s)
   - Backend: mvn clean test (~45s, no Docker)
   - Runs on every commit

2. Integration Tests (integration-tests.yml):
   - Backend: Testcontainers + MySQL (~8-12 min)
   - Frontend-Backend: Real API calls (~5 min)
   - Runs on backend/DB changes

3. E2E Tests (e2e-tests.yml):
   - Full stack: Docker Compose + Cypress (~15-25 min)
   - Runs on main branch changes

This provides clear separation of concerns and faster feedback.

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -51,9 +51,9 @@ jobs:
         continue-on-error: true
 
   backend-unit-tests:
-    name: Backend Tests (Maven + Testcontainers)
+    name: Backend Unit Tests (Maven Only)
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    timeout-minutes: 10
     
     steps:
       - name: 📥 Checkout
@@ -74,15 +74,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
 
-      - name: 🐳 Setup Docker for Testcontainers
-        run: |
-          docker --version
-          docker pull mysql:8.0
-
-      - name: 🧪 Run all tests (unit + integration)
+      - name: 🧪 Run unit tests only (fast)
         working-directory: main_backend
         run: |
-          mvn -B -DforkCount=1 -DreuseForks=false clean test
+          mvn -B clean test
 
       - name: 📊 Generate JaCoCo report
         working-directory: main_backend
