fix(dependabot): Ignore ALL Spring Boot updates
Changed from ignoring only major updates to ignoring all Spring Boot updates.
We'll manage Spring Boot version updates manually to avoid workflow failures.

This prevents Dependabot from creating PRs like #25 that cause all workflows
to fail with dependency conflicts.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -40,9 +40,8 @@ updates:
       - "dependencies"
       - "backend"
     ignore:
-      # Ignore major Spring Boot updates
+      # Ignore ALL Spring Boot updates (managed manually)
       - dependency-name: "org.springframework.boot:*"
-        update-types: ["version-update:semver-major"]
   
   # GitHub Actions
   - package-ecosystem: "github-actions"
