fix(dependabot): Ignore ALL Maven plugin updates
Prevent Dependabot from updating Maven plugins like maven-surefire-plugin.
These plugins are critical for build stability and should be updated manually.

This prevents PRs like #29 that cause all workflows to fail.

Ignored plugins:
- org.apache.maven.plugins:* (all Maven plugins)
- org.jacoco:* (JaCoCo coverage plugin)
- org.springframework.boot:spring-boot-maven-plugin (Spring Boot plugin)

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -42,6 +42,10 @@ updates:
     ignore:
       # Ignore ALL Spring Boot updates (managed manually)
       - dependency-name: "org.springframework.boot:*"
+      # Ignore ALL Maven plugin updates (build stability)
+      - dependency-name: "org.apache.maven.plugins:*"
+      - dependency-name: "org.jacoco:*"
+      - dependency-name: "org.springframework.boot:spring-boot-maven-plugin"
   
   # GitHub Actions
   - package-ecosystem: "github-actions"
