--- a/main_frontend/concert1/package.json
+++ b/main_frontend/concert1/package.json
@@ -32,6 +32,7 @@
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/user-event": "14.5.2",
     "@testing-library/vue": "8.1.0",
+    "@types/node": "^24.8.0",
     "@vitejs/plugin-vue": "6.0.1",
     "@vitest/coverage-v8": "3.2.0",
     "@vitest/ui": "3.2.0",
@@ -40,6 +41,7 @@
     "happy-dom": "15.11.7",
     "jsdom": "25.0.1",
     "nyc": "17.1.0",
+    "typescript": "^5.9.3",
     "vitest": "3.2.0"
   }
 }
