--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -44,7 +44,10 @@ jobs:
 
       - name: 📦 Install frontend dependencies
         working-directory: main_frontend/concert1
-        run: npm ci
+        run: |
+          npm ci
+          # Verify TypeScript is installed for Cypress
+          npx tsc --version
 
       - name: 🐳 Start full stack (MySQL + Backend via Docker Compose)
         run: |
