--- a/.github/workflows/full-pipeline.yml
+++ b/.github/workflows/full-pipeline.yml
@@ -161,7 +161,7 @@ jobs:
 
       - name: Start backend and database
         run: |
-          docker-compose up -d mysql backend
+          docker compose up -d mysql backend
           echo "Waiting for backend..."
           for i in {1..90}; do
             if curl -sf http://localhost:8080/actuator/health | grep -q 'UP'; then
@@ -227,7 +227,7 @@ jobs:
 
       - name: Show backend logs on failure
         if: failure()
-        run: docker-compose logs backend
+        run: docker compose logs backend
 
       - name: Cleanup services
         if: always()
@@ -235,4 +235,4 @@ jobs:
           if [ -f /tmp/nuxt.pid ]; then
             kill $(cat /tmp/nuxt.pid) || true
           fi
-          docker-compose down -v
+          docker compose down -v
