fix(e2e): make cypress tsconfig self-contained (remove circular extends)

--- a/main_frontend/concert1/cypress/tsconfig.json
+++ b/main_frontend/concert1/cypress/tsconfig.json
@@ -1,5 +1,4 @@
 {
-  "extends": "./tsconfig.json",
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
@@ -7,9 +6,11 @@
     "types": ["cypress", "node"],
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "jsx": "preserve"
   },
   "include": [
-    "cypress/**/*.ts"
+    "**/*.ts",
+    "**/*.js"
   ]
 }
